# storage/api-docs/api-docs.json
@@ -432,32 +432,7 @@
                         "description": "error"
                     }
                 }
-            }
-        },
-        "/user/{id}": {
-            "get": {
-                "tags": [
-                    "User"
-                ],
-                "summary": "\u7528\u6237\u8be6\u60c5",
-                "description": "\u7528\u6237\u8be6\u60c5\u63a5\u53e3",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "\u7528\u6237id",
-                        "required": true,
-                        "type": "integer"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "\u6210\u529f"
-                    }
-                }
-            }
-        },
-        "/user": {
+            },
             "post": {
                 "tags": [
                     "User"
@@ -478,6 +453,29 @@
                         "description": "\u767b\u5f55\u5bc6\u7801",
                         "required": true,
                         "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "\u6210\u529f"
+                    }
+                }
+            }
+        },
+        "/users/{id}": {
+            "get": {
+                "tags": [
+                    "User"
+                ],
+                "summary": "\u7528\u6237\u8be6\u60c5",
+                "description": "\u7528\u6237\u8be6\u60c5\u63a5\u53e3",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "\u7528\u6237id",
+                        "required": true,
+                        "type": "integer"
                     }
                 ],
                 "responses": {
@@ -537,7 +535,7 @@
                 }
             }
         },
-        "/user/info": {
+        "/users/info": {
             "get": {
                 "tags": [
                     "User"
@@ -550,7 +548,12 @@
                     "200": {
                         "description": "\u6210\u529f"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ]
             }
         },
         "/signs/{id}": {
